--- a/backend/src/validation/.env
+++ b/backend/src/validation/.env
@@ -1,7 +1,7 @@
 PORT=5000
 NODE_ENV=development
 
-MONGO_URI= "MONGO_URI=mongodb+srv://sumitjoshi1769_db_user:9pHkRwXXwoKOVzK3@cluster0.uzyi2mk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI= ""
 
 SESSION_SECRET="session_secret-key"
 SESSION_EXPIRES_IN= "1d"
